add project5 and ui challenge

--- a/index.html
+++ b/index.html
@@ -66,66 +66,71 @@
       </div>
     </section>
   </header>
+
   <main class="container">
-    <!-- PROJECT 2 -->
-    <section class="project2">
-      <ul class="grid3">
-        <li class="miniScreen"><img src="imagesUpdated/TNRProject/TNRHumane.png" alt="TNRHumane screenshot"></li>
-        <li class="description-content2">
-          <h2>TNRHumane</h2>
-          <p>An Android mobile application that partner with animal organizations and volunteers to help
-            humanely reduce homeless cats overpopulation through <em class="abbreviation">Trap, Neuter, Return</em> program
-            by allowing users to report stray cats sighting.
-            </p>
-            <a class="button" href="project2.html">VIEW CASE STUDY</a>
-        </li>
-        <li class="bigScreen"><img src="imagesUpdated/TNRProject/TNRHumane.png" alt="TNRHumane screenshot"></li>
+
+    <!-- PROJECT 1 -->
+    <section class="project1">
+        <img  class="photo" src="imagesUpdated/TNRProject/TNRhmpg.png" alt="project 1 background">
+          <a href="project2.html">
+            <div class="overlay">
+               <div class="overlay_description">
+                 TNRHumane Case Study</div><!--overlay description-->
+            </div><!--overlay end-->
+          </a>
       </section>
-      <!-- PROJECT 1 -->
-      <section class="project1">
-        <ul class="grid2">
-          <li class="screen"><img src="imagesUpdated/mobileScr.png" alt="virtbox screenshot"></li>
-          <li class="bigScreen"><img src="imagesUpdated/virtbox.png" alt="virtBox screenshot"></li>
-          <li class="description-content1">
-            <h2>virtBox</h2>
-              <p>A cloud storage
-                provider for online learners created to simplify
-                the process of storing and modifying files
-                in an organized way.</p>
-              <a class="button" href="project1.html">VIEW CASE STUDY</a>
-          </li>
-        </ul>
+
+      <!-- PROJECT 2 -->
+      <section class="project2">
+        <img  class="photo" src="imagesUpdated/virtboxhmpg.png" alt="project 2 background">
+          <a href="project1.html">
+            <div class="overlay">
+               <div class="overlay_description">VirtBox Case Study</div><!--overlay description-->
+            </div><!--overlay end-->
+          </a>
       </section>
+
       <!-- PROJECT 3 -->
       <section class="project3">
-        <ul class="grid3">
-          <li class="miniScreen"><img src="imagesUpdated/timelineProject/mobileTimeline.png" alt="Timeline screenshot"></li>
-          <li class="description-content2">
-            <h2 class="longTitle">Intranet Timeline</h2>
-            <p>A responsive timeline designed for GreenSky, LLC SharePoint intranet.</p>
-              <a class="button" href="project3.html">VIEW CASE STUDY</a>
-          </li>
-          <li class="bigScreen"><img src="imagesUpdated/timelineProject/timeline.png" alt="Timeline screenshot"></li>
+        <img  class="photo" src="imagesUpdated/timelineProject/Timelinehmpg.png" alt="project3 background">
+          <a href="project3.html">
+            <div class="overlay">
+               <div class="overlay_description">GreenSky Responsive Timeline Overview</div><!--overlay description-->
+            </div><!--overlay end-->
+          </a>
         </section>
+
         <!-- PROJECT 4 -->
         <section class="project4">
-          <ul class="grid2">
-            <li class="screen"><img src="imagesUpdated/emailProject/email.png" alt="email screenshot"></li>
-            <li class="bigScreen"><img src="imagesUpdated/emailProject/email.png" alt="email screenshot"></li>
-            <li class="description-content1">
-              <h2 class="longTitle">Email Template</h2>
-                <p>An email template created during my internship that train home improvement
-                  merchants on how to reach out to their customers.</p>
-                <a class="button" href="project4.html">VIEW CASE STUDY</a>
-            </li>
-          </ul>
+          <img  class="photo" src="imagesUpdated/emailProject/Emailhmpg.png" alt="project 4 background">
+            <a href="project4.html">
+              <div class="overlay">
+                 <div class="overlay_description">GreenSky Email Template Overview</div><!--overlay description-->
+              </div><!--overlay end-->
+            </a>
         </section>
-        <!-- UI Challenge -->
-        <section class="UIChallenge"> <!-- background -->
-          <div class="grid1 UICHallenge">
-                <h2 class="longTitle">Daily UI Challenge coming soon</h2>
-          </div>
-        </section>
+
+        <!-- PROJECT 5 -->
+        <section class="project5">
+            <img  class="photo" src="imagesUpdated/craigslistProject/craigslisthmpg.png" alt="project 5 background">
+              <a href="project5.html">
+                <div class="overlay">
+                   <div class="overlay_description">
+                     Craigslist Redesign Coming Soon</div><!--overlay description-->
+                </div><!--overlay end-->
+              </a>
+          </section>
+
+        <!-- PROJECT 5 -->
+        <section class="project6">
+            <img  class="photo" src="imagesUpdated/UIProject/uihmpg.png" alt="project 6 background">
+              <a href="uiChallenge.html">
+                <div class="overlay">
+                   <div class="overlay_description">
+                     UI Collections Coming Soon</div><!--overlay description-->
+                </div><!--overlay end-->
+              </a>
+          </section>
   </main>
   <footer> <!-- background -->
       <section class="footer-content">
