--- a/project4.html
+++ b/project4.html
@@ -53,10 +53,10 @@
         <div class="grid2">
            <!-- OVERVIEW -->
            <section class ="overview">
-              <h2>OVERVIEW</h2>
+              <h2>GREENSKY TEMPLATE EMAIL OVERVIEW</h2>
               <p>This is an email template created during my internship that trains home improvement merchants on how to reach out to their customers.
                 I was giving a list of contents for the email template and was tasked to create a responsive layout that would highlight important data for merchants to reach out to their customers. The email template includes the customer's contact information, services they are searching for,
-                and a  sample script for merchants to reach out to their potential customers. 
+                and a  sample script for merchants to reach out to their potential customers.
               </section>
            </div>
            <div class="grid2">
