--- a/project3.html
+++ b/project3.html
@@ -51,7 +51,7 @@
         <div class="grid2">
            <!-- OVERVIEW -->
            <section class ="overview">
-              <h2>OVERVIEW</h2>
+              <h2>GREENSKY RESPONSIVE TIMELINE OVERVIEW</h2>
               <p>This is one of the projects I worked on during my internship at GreenSky, LLC. I had a chance to work with a SharePoint
                 developer to help with the redesign of their intranet site.
                 I was tasked to create a responsive timeline for their "History" page giving the limitations of SharePoint. The project was designed using the company's style guide to enforced
