update internship detail process

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <ul>
               <li><a href="index.html#projects">PROJECTS</a></li>
               <li><a href="about.html">ABOUT</a></li>
-              <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Resume.pdf" target="_blank">RESUME</a></li>
+              <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Tristine-Nguyen-Resume.pdf" target="_blank">RESUME</a></li>
             </ul>
       </div>
     </nav>
@@ -44,7 +44,7 @@
           <a href="#" class="btn-close" onclick="closeSlideMenu()">&times;</a>
           <li><a href="index.html#projects" class="portfolio">PROJECTS</a></li>
           <li><a href="about.html">ABOUT</a></li>
-          <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
+          <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Tristine-Nguyen-Resume.pdf" target="_blank">RESUME</a></li>
       </div>
     <!-- hero unit -->
     <section class="hero"> <!-- background -->
@@ -90,6 +90,16 @@
           </a>
       </section>
 
+      <!-- PROJECT 7 -->
+      <section class="project7">
+          <img  class="photo" src="imagesUpdated/ostProject/ost.png" alt="project 7 background">
+            <a href="project7.html">
+              <div class="overlay">
+                 <div class="overlay_description">GreenSky's Custumer Service's Dashboard Overview</div><!--overlay description-->
+              </div><!--overlay end-->
+            </a>
+        </section>
+
       <!-- PROJECT 3 -->
       <section class="project3">
         <img  class="photo" src="imagesUpdated/timelineProject/Timelinehmpg.png" alt="project3 background">
@@ -110,10 +120,21 @@
             </a>
         </section>
 
+        <!-- PROJECT 6 -->
+        <section class="project6">
+            <img  class="photo" src="imagesUpdated/UIProject/uihmpg.png" alt="project 6 background">
+              <a href="uiChallenge.html">
+                <div class="overlay">
+                   <div class="overlay_description">
+                     Daily UI Challenge</div><!--overlay description-->
+                </div><!--overlay end-->
+              </a>
+          </section>
+
         <!-- PROJECT 5 -->
         <section class="project5">
             <img  class="photo" src="imagesUpdated/craigslistProject/craigslisthmpg.png" alt="project 5 background">
-              <a href="project5.html">
+              <a href="#">
                 <div class="overlay">
                    <div class="overlay_description">
                      Craigslist Redesign Coming Soon</div><!--overlay description-->
@@ -121,16 +142,7 @@
               </a>
           </section>
 
-        <!-- PROJECT 5 -->
-        <section class="project6">
-            <img  class="photo" src="imagesUpdated/UIProject/uihmpg.png" alt="project 6 background">
-              <a href="uiChallenge.html">
-                <div class="overlay">
-                   <div class="overlay_description">
-                     UI Collections Coming Soon</div><!--overlay description-->
-                </div><!--overlay end-->
-              </a>
-          </section>
+
   </main>
   <footer> <!-- background -->
       <section class="footer-content">
