--- a/project1.html
+++ b/project1.html
@@ -33,7 +33,7 @@
                 <ul>
                   <li><a href="index.html#projects">PROJECTS</a></li>
                   <li><a href="about.html">ABOUT</a></li>
-                  <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
+                  <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Tristine-Nguyen-Resume.pdf" target="_blank">RESUME</a></li>
                 </ul>
           </div>
         </nav>
@@ -42,7 +42,7 @@
               <a href="#" class="btn-close" onclick="closeSlideMenu()">&times;</a>
               <li><a href="index.html#projects" class="portfolio">PROJECTS</a></li>
               <li><a href="about.html">ABOUT</a></li>
-              <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
+              <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Tristine-Nguyen-Resume.pdf" target="_blank">RESUME</a></li>
           </div>
       <!-- hero unit -->
       <section class="hero-background">
@@ -313,7 +313,7 @@
                    <div class="logo-container">
                      <img src="imagesUpdated/iconsLogos/GDrive.png" alt="Google Drive logo">
                    </div>
-                    <p>Google Drive is the most popular due to its accessibility.
+                    <p>Google Drive is the most popular due to its collaboration feature.
                        There are sub-environments for each file types which can be accessed anywhere and share with anyone in real-time collaboration.</p>
                  </article>
                  <article>       <!-- DROPBOX -->
@@ -338,12 +338,11 @@
                 <p>Google Drive, Dropbox, and Box all known for a specific feature. So I thought, “What should virtBox be known for?”.
                    After careful considerations of virtBox’s target audience and goals to help online learners, I decided it should be known for its organization.</p>
                    <ul>
-                     <li>Google Drive: accessibility</li>
+                     <li>Google Drive: accessibility and collaboration</li>
                      <li>Dropbox: synchronization</li>
-                     <li>box: collaboration</li>
-                     <li>virtBox: organization</li>
+                     <li>box: support for MS Office and large organizations</li>
+                     <li>virtBox: simplicity</li>
                    </ul>
-                  <p>Sounds about right.</p>
                 <div class="link">
                   <a href="https://docs.google.com/document/d/1g9imbsTdDA3NKcgQYV9RdWiU63zimhgT3TPJGdQUw5M/edit?usp=sharing" target="_blank">VIEW DETAILED ANALYSIS</a>
                 </div>
@@ -481,7 +480,7 @@
                       </div>
              </section>
            </div>
-           <!-- 3.2: LOGO SKETCHES-->
+           <!-- 3.2: LOGO SKETCHES
            <div class="grid-bg">
             <div class="grid2">
              <section class ="logoSketches">
@@ -563,11 +562,8 @@
                   </li>
                   <li>
                     <img src="imagesUpdated/menuPreferenceB.png" alt="Menu preference B">
-                    <h5>72% picked option B</h5>
-                      <p>Since they were unable to view what entails under <em class="bold">“categories”</em>,
-                       they  had concerns of having to scroll down if the <em class="bold">“categories”</em> option is expanded.
-                       However, there were only 3 options under <em class="bold">“categories”</em>, which users will not have to worry about this concern.
-                       Thus, I decided to implement option A for the next iteration.</p>
+                    <h5>72% picked option A</h5>
+                      <p>Many users justified this choice due to the limited options being shown. Having all laid out is easier to navigate.</p>
                   </li>
                   <div class="top-g2"><li class="slides-bg"><h4>One button to add files vs 2 buttons to add files</h4></li></div>
                   <li>
@@ -575,11 +571,8 @@
                   </li>
                   <li class="bottom-g2">
                     <img src="imagesUpdated/addPreferenceB.png" alt="Add preference B">
-                    <h5>59% of users picked option B</h5>
-                      <p>This test was the hardest. Both options started off very even. Some stated they like the simplicity while
-                        others think it is less confusing to have 2 buttons. I decided to move on with option A to keep the interface clean
-                        and to following the rule of progressive disclosure. If given more time, I would definitely perform more tests.
-                        This is one of those situations were what designers think is best might not be what the users want.</p>
+                    <h5>59% of users picked option A</h5>
+                      <p>Majority of users picked option A for simplicity</p>
                   </li>
                   <li class="slides-bg"><h4>Icons vs non-icons</h4></li>
                   <li>
@@ -603,22 +596,16 @@
                      <h6 class="w3-display-top">Laid out navigation menu vs collapsed navigation menu</h6>
                       <img src="imagesUpdated/menuPreference.png" alt ="Menu preference">
                         <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
-                          <h4>72% picked option B</h4>
-                            <p>Since they were unable to view what entails under <em class="bold">“categories”</em>,
-                             they  had concerns of having to scroll down if the <em class="bold">“categories”</em> option is expanded.
-                             However, there were only 3 options under <em class="bold">“categories”</em>, which users will not have to worry about this concern.
-                             Thus, I decided to implement option A for the next iteration.</p>
+                          <h4>72% picked option A</h4>
+                            <p>Many users justified this choice due to the limited options being shown. Having all laid out is easier to navigate.</p>
                         </div>
                  </article>
                  <article class="w3-display-container mySlides">
                      <h6 class="w3-display-top">One button to add files vs 2 buttons to add files</h6>
                       <img src="imagesUpdated/addPreference.png" alt="Add preference">
                         <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
-                          <h4>59% of users picked option B</h4>
-                            <p>This test was the hardest. Both options started off very even. Some stated they like the simplicity while
-                              others think it is less confusing to have 2 buttons. I decided to move on with option A to keep the interface clean
-                              and to following the rule of progressive disclosure. If given more time, I would definitely perform more tests.
-                              This is one of those situations were what designers think is best might not be what the users want.</p>
+                          <h4>59% of users picked option A</h4>
+                            <p>Majority of users picked option A for simplicity.</p>
                         </div>
                  </article>
                  <article class="w3-display-container mySlides">
