--- a/project5.html
+++ b/project5.html
@@ -36,7 +36,7 @@
                 <ul>
                   <li><a href="index.html#projects">PROJECTS</a></li>
                   <li><a href="about.html">ABOUT</a></li>
-                  <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
+                  <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Tristine-Nguyen-Resume.pdf" target="_blank">RESUME</a></li>
                 </ul>
           </div>
         </nav>
@@ -45,7 +45,7 @@
               <a href="#" class="btn-close" onclick="closeSlideMenu()">&times;</a>
               <li><a href="index.html#projects" class="portfolio">PROJECTS</a></li>
               <li><a href="about.html">ABOUT</a></li>
-              <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
+              <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Tristine-Nguyen-Resume.pdf" target="_blank">RESUME</a></li>
           </div>
       <!-- hero unit -->
       <section class="hero-background">
@@ -239,77 +239,94 @@
              <section class ="competitors">
               <h3>COMPETITIVE ANALYSIS</h3>
                <div class="analysis">
+
+           <!--- LETGO -------->
                  <article>
                    <div class="logo-container">
                      <img src="imagesUpdated/craigslistProject/letgo_logo.png" alt="Letgo logo">
                    </div>
                     <p><em class="bold">Pros</em></p>
                       <ul>
-                        <li>test 1</li>
-                        <li>test 2</li>
+                        <li>Available as a mobile app, which is more portable and convenience</li>
+                        <li>Free to use</li>
+                        <li>Sellers can dispute negative reviews, which means there are support from the staff</li>
                       </ul>
-                    <p><em class="bold">Cons</em>.</p>
+                    <br>
+                    <p><em class="bold">Cons</em></p>
                     <ul>
-                      <li>test 1</li>
-                      <li>test 2</li>
+                      <li>Dont support payment</li>
+                      <li>Have to meet buyers in person to make sales</li>
+                      <li>There are certain prohibited items such as    live animals, firearms, perishable food, etc.</li>
+                      <li>Letgo will generate a title for an ad post</li>
                     </ul>
                  </article>
+
+           <!--- OFFERUP -------->
                  <article>
                    <div class="logo-container">
                      <img src="imagesUpdated/craigslistProject/offerUp_logo.jpg" alt="OfferUp logo">
                    </div>
                    <p><em class="bold">Pros</em></p>
                      <ul>
-                       <li>test 1</li>
-                       <li>test 2</li>
+                       <li>Available as a mobile app</li>
+                       <li>Users can have their identity verified with their driver’s license so you know they’re trustworthy</li>
+                       <li>Ads are displayed chronologically, but can sellers can "bump" the item back to the top for $2</li>
                      </ul>
-                   <p><em class="bold">Cons</em>.</p>
+
+                   <br>
+                   <p><em class="bold">Cons</em></p>
                    <ul>
-                     <li>test 1</li>
-                     <li>test 2</li>
+                     <li>Cannot delete account, users can only deactivate it</li>
+                     <li>Shipping fees may be included</li>
+                     <li>Can only buy and sell locally</li>
                    </ul>
                  </article>
+
+                 <!--- FACEBOOK MARKETING -------->
                  <article>
                    <div class="logo-container">
                      <img src="imagesUpdated/craigslistProject/fbMarketplace_logo.png" alt="Facebook Marketplace logo">
                    </div>
                    <p><em class="bold">Pros</em></p>
                      <ul>
-                       <li>test 1</li>
-                       <li>test 2</li>
+                       <li>More support from Facebook staff</li>
+                       <li>More control of privacy</li>
+                       <li>Intuitive and free of charge</li>
                      </ul>
-                   <p><em class="bold">Cons</em>.</p>
+                   <br>
+                   <p><em class="bold">Cons</em></p>
                    <ul>
-                     <li>test 1</li>
-                     <li>test 2</li>
+                     <li>User information such as username and profile is exposed for as long as they has a Facebook account</li>
+                     <li>Only available for Facebook users in the United States, United Kingdom, Australia and New Zealand</li>
+                     <li>No buyer protection</li>
                    </ul>
                  </article>
                </div>
              </section>
              <section class="takeaway1">
-                  <p>Based on the survey and the competitive analysis, I was able to ideate the basic structure of the app.</p>
-                <div class="link">
-                  <a href="https://docs.google.com/document/d/1lKgxQiQtY6JDRcx-7WdhAUg20N-4SO0xcqZCKrmCd5o/edit?usp=sharing" target="_blank">VIEW DETAILED ANALYSIS</a>
-                </div>
+                  <p>Based on the survey and the competitive analysis, whereas Craigslist has tremendous problems with spams and scam posts, its competitorss proved to have more control of the platform to counter this problem. For example,
+                  Letgo prohibit certain items and generate title for posts; Facebook and OfferUp provide much more customer support and provide user verification to establish trust.</p>
              </section>
            </div>
            </div>
 
-           <div class="grid-bg">
+
+           <!-- https://avocadoughtoast.com/offerup-vs-letgo-comparison/ -->
+
             <div class="grid2">
              <!-- PHASE 2: INFORMATION ARCHITECTURE -->
              <section class ="userStories coloredbg">
               <hr>
                <h2>PHASE 2: INFORMATION ARCHITECTURE</h2>
                 <h3>USER STORIES</h3>
-                 <p>With a general idea of the user’s goals and frustrations, I created a user story for new and returning users.
+                 <p>With a general idea of the user’s goals and frustrations, I created a user story for sellers and buyers.
                     This process defined and prioritized tasks all users should be able to do, ranging from low, medium, to high.</p>
               <section class="takeaway1">
                <h6>4 tasks to focus on are:</h6>
                 <ul>
-                 <li>Report feline sighting</li>
-                 <li>Location tracker</li>
-                 <li>Sign in/ sign up</li>
+                 <li>Easily navigate to item categories</li>
+                 <li>Sort through items</li>
+                 <li>View item details</li>
                  <li>Donate</li>
                 </ul>
                   <div class="link">
@@ -318,7 +335,6 @@
               </section>
              </section>
             </div>
-           </div>
                <!-- 2.1: USER FLOWS -->
                <div class="extend">
                  <div class="hover-box">
