--- a/uiChallenge.html
+++ b/uiChallenge.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="styles/TNRHumane.css">
   <link rel="stylesheet" href="styles/timeline.css">
   <link rel="stylesheet" href="styles/emailTemplate.css">
-  <link rel="stylesheet" href="styles/uiChallenge.css">
+  <link rel="stylesheet" href="styles/OneGridLayout.css">
 
   <!-- Google Fonts -->
   <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet'>
@@ -37,7 +37,7 @@
                 <ul>
                   <li><a href="index.html#projects">PROJECTS</a></li>
                   <li><a href="about.html">ABOUT</a></li>
-                  <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
+                  <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Tristine-Nguyen-Tristine-Nguyen-Resume.pdf" target="_blank">RESUME</a></li>
                 </ul>
           </div>
         </nav>
@@ -46,7 +46,7 @@
               <a href="#" class="btn-close" onclick="closeSlideMenu()">&times;</a>
               <li><a href="index.html#projects" class="portfolio">PROJECTS</a></li>
               <li><a href="about.html">ABOUT</a></li>
-              <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
+              <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Tristine-Nguyen-Resume.pdf" target="_blank">RESUME</a></li>
           </div>
     </header>
     <main>
@@ -57,7 +57,7 @@
          <section class ="challenge">
           <h3>UI DESIGN CHALLENGE</h3>
             <p>In order to hone on my design skills, I decided to participate in the 100 Day Design Challenge. I aim to improve my visual brainstorming process, consistency, and to learn vector illustration.
-              This project is being update every other week.</p>
+              This project is being updated every other week.</p>
 
               <p><span class="bold">DISCLAIMER:</span> I unterstand that for a design to work, there must be extensive research, testing, and analysis in order
                 to provide a solution to a problem. The prompts for this challenge were too vague for any real problem solving to occur.
@@ -95,8 +95,8 @@
 
            <div class="grid2">
             <!-- DAY 004 -->
-              <section class ="challenge"">
-                <h3>DAY 004</h3>
+              <section class="challenge">
+                <h3>DAY 004: LOADING PAGE</h3>
                   <p>This is a loading screen inprired by a Japanese anime forest spirit, Totoro. </p>
                   <img src="imagesUpdated/UIProject/004.png" alt="day 4 screenshot">
                </section>
@@ -104,12 +104,104 @@
 
 
            <div class="grid2">
-            <!-- DAY 004 -->
-              <section class ="challenge"">
-                <h3>DAY 005</h3>
+            <!-- DAY 005 -->
+              <section class="challenge">
+                <h3>DAY 005: VECTOR</h3>
                   <p>I was feeling unmotivated and did not feel like working on ay pending projects,
                     so I decided to work on my illustration skills by creating one of my favorite food. </p>
                   <img src="imagesUpdated/UIProject/005.png" alt="day 5 screenshot">
+               </section>
+           </div>
+
+           <div class="grid2">
+            <!-- DAY 006 -->
+              <section class="challenge">
+                <h3>DAY 006: USER PROFILE</h3>
+                  <p>This is a user profile I created for an existing mobile app called Webtoon.
+                    I noticed their bottom navigation was confusing and there is no user profile option availble so I decided to create one,
+                    renamed the bottom navigation, and reorganized some information on the app. I also practiced my vector drawing by creating the avatar.</p>
+                  <img src="imagesUpdated/UIProject/006.png" alt="day 6 screenshot">
+               </section>
+           </div>
+
+           <div class="grid2">
+            <!-- DAY 007 -->
+              <section class="challenge">
+                <h3>DAY 007: 404 PAGE</h3>
+                  <p>This is a 404 page, displayed when a page is not found.</p>
+                  <img src="imagesUpdated/UIProject/007.png" alt="day 7 screenshot">
+               </section>
+           </div>
+
+           <div class="grid2">
+            <!-- DAY 008 -->
+              <section class="challenge">
+                <h3>DAY 008: SOCIAL SHARE</h3>
+                  <p>Have you ever went to a bathroom, do your thing, and realized there's no toilet paper?! The prompt for this day was to create a share button.
+                    Instead of creating just a button, I decided to design a share functionality for a conceptual app.
+                    This app will send a help message to the user’s added contact/social network whenever he/she runs out of toilet paper.</p>
+                  <img src="imagesUpdated/UIProject/008.png" alt="day 8 screenshot">
+               </section>
+           </div>
+
+           <div class="grid2">
+            <!-- DAY 009 -->
+              <section class="challenge">
+                <h3>DAY 009: FLASH MESSAGES</h3>
+                  <p>I came across <a href="https://nextshark.com/pudding-alert-anti-theft-device/" target="_blank">
+                    this</a> article talking about a new invention in Japan where the device would detect when a snack is
+                    stolen from the fridge. Since the prompt for this day is to create flash messages,
+                    I wondered if this invention has an app, what its flash messages would look like.
+                    I also created an app logo, which is a Japanese mochi, for this invention. This is an idea I had in mind.</p>
+                  <img src="imagesUpdated/UIProject/009.png" alt="day 9 screenshot">
+               </section>
+           </div>
+
+           <div class="grid2">
+            <!-- DAY 010 -->
+              <section class="challenge">
+                <h3>DAY 010: E-COMMERCE SHOP (SINGLE ITEM)</h3>
+                  <p>This is a design for a coffee item. For this task, I focused mostly on information architecture.
+                    I studied how Amazon, eBay, Target, and Walmart display their items online.
+                    Their differences and similarities. I noticed that each platform display the item based on their business strength.
+                    Amazon included a lot of fast shipping options along with links to promote their Amazon Prime delivery deals.
+                    Where as Target and Walmart provide “pick up in store” for a lower delivery rate. </p>
+                  <img src="imagesUpdated/UIProject/010.png" alt="day 10 screenshot">
+               </section>
+           </div>
+
+           <div class="grid2">
+            <!-- DAY 011 -->
+              <section class="challenge">
+                <h3>DAY 011: DASHBOARD</h3>
+                  <p>This is a dashboard design to log in and keep track of job applications. The companies and data in
+                  this task DOES NOT reflect my personal application process. The company names, job titles, interests, etc. are
+                  randomized and pulled from search results on various platforms.
+                </p>
+                  <img src="imagesUpdated/UIProject/011.png" alt="day 11 screenshot">
+                  <img src="imagesUpdated/UIProject/0112.png" alt="day 11 popup screenshot">
+               </section>
+           </div>
+
+           <div class="grid2">
+            <!-- DAY 012 -->
+              <section class="challenge">
+                <h3>DAY 012: VECTOR ILLUSTRATION</h3>
+                  <p>This day, I learned to better my vector skills by improving an anime version of myself. Some earlier versions
+                    were used in my "About" page in this portfolio, there were created based on my hand drawings, but I've always
+                    wanted to create a digital version that is more refined.
+                </p>
+                  <img src="imagesUpdated/UIProject/012.png" alt="day 12 screenshot">
+               </section>
+           </div>
+
+           <div class="grid2">
+            <!-- DAY 013 -->
+              <section class="challenge">
+                <h3>DAY 013: DASHBOARD</h3>
+                  <p>This is a new years countdown board.
+                </p>
+                  <img src="imagesUpdated/UIProject/013.png" alt="day 13 screenshot">
                </section>
            </div>
 
