--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
               <ul>
                 <li><a href="index.html#projects">PROJECTS</a></li>
                 <li><a href="about.html">ABOUT</a></li>
-                <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
+                <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Tristine-Nguyen-Resume.pdf" target="_blank">RESUME</a></li>
               </ul>
         </div>
       </nav>
@@ -41,7 +41,7 @@
             <a href="#" class="btn-close" onclick="closeSlideMenu()">&times;</a>
             <li><a href="index.#projects" class="portfolio">PROJECTS</a></li>
             <li><a href="about.html">ABOUT</a></li>
-            <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
+            <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Tristine-Nguyen-Resume.pdf" target="_blank">RESUME</a></li>
         </div>
 
         <!-- hero unit -->
