--- a/project3.html
+++ b/project3.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/virtbox.css">
   <link rel="stylesheet" href="styles/TNRHumane.css">
-  <link rel="stylesheet" href="styles/timeline.css">
+  <link rel="stylesheet" href="styles/OneGridLayout.css">
+
   <!-- Google Fonts -->
   <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:600" rel="stylesheet">
@@ -34,7 +35,7 @@
                 <ul>
                   <li><a href="index.html#projects">PROJECTS</a></li>
                   <li><a href="about.html">ABOUT</a></li>
-                  <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
+                  <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Tristine-Nguyen-Resume.pdf" target="_blank">RESUME</a></li>
                 </ul>
           </div>
         </nav>
@@ -43,7 +44,7 @@
               <a href="#" class="btn-close" onclick="closeSlideMenu()">&times;</a>
               <li><a href="index.html#projects" class="portfolio">PROJECTS</a></li>
               <li><a href="about.html">ABOUT</a></li>
-              <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
+              <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Tristine-Nguyen-Resume.pdf" target="_blank">RESUME</a></li>
           </div>
     </header>
     <main>
@@ -51,14 +52,45 @@
         <div class="grid2">
            <!-- OVERVIEW -->
            <section class ="overview">
-              <h2>GREENSKY RESPONSIVE TIMELINE OVERVIEW</h2>
-              <p>This is one of the projects I worked on during my internship at GreenSky, LLC. I had a chance to work with a SharePoint
-                developer to help with the redesign of their intranet site.
-                I was tasked to create a responsive timeline for their "History" page giving the limitations of SharePoint. The project was designed using the company's style guide to enforced
-                the ADA compliance guideline. It is currently still under production.
+              <h3>GREENSKY RESPONSIVE TIMELINE OVERVIEW</h3>
+              <p>This is one of the projects I worked on during my internship at GreenSky, LLC.
+                I had a chance to work with a SharePoint developer to help with the redesign of their intranet site.
+                I was tasked to create a responsive timeline for their "History" page giving the limitations of SharePoint.
+                The project was designed using the company's style guide to enforced the ADA compliance guideline.
+                It is currently still under production.</p>
+
+                <br>
+                  <ul><p class="bold">Goal</p>
+                    <li>Use ADA compliance color palette</li>
+                    <li>Create a responsive timeline that is compatible with mobile, tablet, and desktop. </li>
+                  </ul>
+                  <ul><p class="bold">Constraint</p>
+                    <li>Must work around Sharepoint's limited design customizations.</li>
+                  </ul>
+
+                <br>
+                  <h3>PROCESS</h3>
+                    <ul><p class="bold">1. Discovery & Research</p>
+                      <li>Work with product owner to envision the "ideal" result</li>
+                      <li>Work with lead designer for verifications and design discussions</li>
+                    </ul>
+                    <ul><p class="bold">2. Design</p>
+                      <li>Sketches</li>
+                      <li>Present to developer</li>
+                    </ul>
+                    <ul><p class="bold">3. Prototype</p>
+                      <li>Hi-Fidelity mockups</li>
+                    </ul>
+                    <ul><p class="bold">4. Feedbacks & Iterations</p>
+                      <li>Present prototypes in design meetings</li>
+                      <li>Iterate</li>
+                      <li>repeat for feedback and iterate</li>
+                    </ul>
               </section>
            </div>
+
            <div class="grid2">
+             <h3>OUTCOME</h3>
              <img class="timeline" src="imagesUpdated/timelineProject/timeline.png" alt="timeline screenshot">
            </div>
 
