--- a/project4.html
+++ b/project4.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/virtbox.css">
   <link rel="stylesheet" href="styles/TNRHumane.css">
-  <link rel="stylesheet" href="styles/timeline.css">
-  <link rel="stylesheet" href="styles/emailTemplate.css">
+  <link rel="stylesheet" href="styles/OneGridLayout.css">
+
 
   <!-- Google Fonts -->
   <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet'>
@@ -36,7 +36,7 @@
                 <ul>
                   <li><a href="index.html#projects">PROJECTS</a></li>
                   <li><a href="about.html">ABOUT</a></li>
-                  <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
+                  <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Tristine-Nguyen-Resume.pdf" target="_blank">RESUME</a></li>
                 </ul>
           </div>
         </nav>
@@ -45,7 +45,7 @@
               <a href="#" class="btn-close" onclick="closeSlideMenu()">&times;</a>
               <li><a href="index.html#projects" class="portfolio">PROJECTS</a></li>
               <li><a href="about.html">ABOUT</a></li>
-              <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
+              <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Tristine-Nguyen-Resume.pdf" target="_blank">RESUME</a></li>
           </div>
     </header>
     <main>
@@ -53,14 +53,40 @@
         <div class="grid2">
            <!-- OVERVIEW -->
            <section class ="overview">
-              <h2>GREENSKY TEMPLATE EMAIL OVERVIEW</h2>
+              <h3>GREENSKY TEMPLATE EMAIL OVERVIEW</h3>
               <p>This is an email template created during my internship that trains home improvement merchants on how to reach out to their customers.
                 I was giving a list of contents for the email template and was tasked to create a responsive layout that would highlight important data for merchants to reach out to their customers. The email template includes the customer's contact information, services they are searching for,
                 and a  sample script for merchants to reach out to their potential customers.
+                <br>
+                  <ul><p class="bold">Goal</p>
+                    <li>Create a responsive email template</li>
+                    <li>Update the sample script and content</li>
+                  </ul>
+
+                <br>
+                  <h3>PROCESS</h3>
+                    <ul><p class="bold">1. Discovery & Research</p>
+                      <li>Dissect sample email template</li>
+                      <li>Work with lead designer for verifications and design discussions</li>
+                    </ul>
+                    <ul><p class="bold">2. Design</p>
+                      <li>Sketches</li>
+                      <li>Anaylyze old wireframes</li>
+                    </ul>
+                    <ul><p class="bold">3. Prototype</p>
+                      <li>Hi-Fidelity mockups</li>
+                    </ul>
+                    <ul><p class="bold">4. Feedbacks & Iterations</p>
+                      <li>Present prototypes in design meetings</li>
+                      <li>Iterate</li>
+                      <li>repeat for feedback and iterate</li>
+                    </ul>
               </section>
            </div>
+
            <div class="grid2">
-             <img class="email" src="imagesUpdated/emailProject/email.png" alt="email screenshot">
+             <h3>OUTCOME</h3>
+              <img class="email" src="imagesUpdated/emailProject/email.png" alt="email screenshot">
            </div>
 
       </main>
