Add password to AnswerRocket page

--- a/answerRocket.html
+++ b/answerRocket.html
@@ -53,40 +53,53 @@
         <div class="grid2">
            <!-- OVERVIEW -->
            <section class ="overview">
-              <h3>GREENSKY TEMPLATE EMAIL OVERVIEW</h3>
-              <p>This is an email template created during my internship that trains home improvement merchants on how to reach out to their customers.
-                I was giving a list of contents for the email template and was tasked to create a responsive layout that would highlight important data for merchants to reach out to their customers. The email template includes the customer's contact information, services they are searching for,
-                and a  sample script for merchants to reach out to their potential customers.
+              <h3>Hello Rocketeers!</h3>
+              <p>I heard you're looking for a UI/UX designer with skills in HTML and CSS. I might be your future designer.
+                  I went ahead and checked out some of your products. The mobile product caught my eyes due to the challenge of having
+                  abundant data being fit into a mobile screen. I did a UX audit based on some features you showed on your company website.
+              <br></br>
+               <p>These improvements are done with best UX practices without much understanding of your internal secret business strategy. However,
+                  I'd like to change that. I'd love to meet in person with the team to learn about your workflow, target audience, and how
+                  we can take this product further!</p>
                 <br>
                   <ul><p class="bold">Goal</p>
-                    <li>Create a responsive email template</li>
-                    <li>Update the sample script and content</li>
+                    <li>Utilize updated brand colors</li>
+                    <li>Create a consistent font styling and content</li>
+                    <li>Make data more scannable</li>
                   </ul>
 
                 <br>
                   <h3>PROCESS</h3>
                     <ul><p class="bold">1. Discovery & Research</p>
-                      <li>Dissect sample email template</li>
-                      <li>Work with lead designer for verifications and design discussions</li>
+                      <li>Analyzing features and new style guide</li>
+                      <li>Dissect contents</li>
                     </ul>
                     <ul><p class="bold">2. Design</p>
                       <li>Sketches</li>
-                      <li>Analyze old wireframes</li>
+                      <li>Analyze wireframes</li>
                     </ul>
-                    <ul><p class="bold">3. Prototype</p>
+                    <ul><p class="bold">3. Mockups</p>
                       <li>Hi-Fidelity mockups</li>
-                    </ul>
-                    <ul><p class="bold">4. Feedbacks & Iterations</p>
-                      <li>Present prototypes in design meetings</li>
-                      <li>Iterate</li>
-                      <li>repeat for feedback and iterate</li>
                     </ul>
               </section>
            </div>
 
            <div class="grid2">
-             <h3>OUTCOME</h3>
-              <img class="email" src="imagesUpdated/emailProject/email.png" alt="email screenshot">
+             <section>
+               <h3>UX AUDIT</h3>
+                  <img class="audit" src="imagesUpdated/answerRocketProject/audit1.png" alt="audit 1 screenshot">
+                  <img class="audit" src="imagesUpdated/answerRocketProject/audit2.png" alt="audit 2 screenshot">
+                  <img class="audit" src="imagesUpdated/answerRocketProject/audit3.png" alt="audit 3 screenshot">
+           </section>
+           </div>
+
+           <div class="grid2">
+             <section>
+               <h3>SUGGESTIONS</h3>
+               <img class="suggestion" src="imagesUpdated/answerRocketProject/suggestion1.png" alt="suggestion 1 screenshot">
+               <img class="suggestion" src="imagesUpdated/answerRocketProject/suggestion2.png" alt="suggestion 2 screenshot">
+               <img class="suggestion" src="imagesUpdated/answerRocketProject/suggestion3.png" alt="suggestion 3 screenshot">
+           </section>
            </div>
 
       </main>
