--- a/project7.html
+++ b/project7.html
@@ -68,12 +68,12 @@
                 <br>
                   <h3>PROCESS</h3>
                     <ul><p class="bold">1. Discovery & Research</p>
-                      <li>Dissect Jira tickets</li>
+                      <li>Dissect requirements through Jira ticket</li>
                       <li>Work with lead designer for verifications and design discussions</li>
                     </ul>
                     <ul><p class="bold">2. Design</p>
                       <li>Sketches</li>
-                      <li>Anaylyze old wireframes</li>
+                      <li>Analyze old wireframes</li>
                     </ul>
                     <ul><p class="bold">3. Prototype</p>
                       <li>Hi-Fidelity mockups</li>
@@ -89,7 +89,7 @@
            <div class="grid2">
              <section>
                <h3>OUTCOME</h3>
-                <p>Unfortunately, this project was not able to launched. It was haulted in anticipation for an upcoming product line. However, below
+                <p>Unfortunately, this project was not able to launched. It was halted in anticipation for an upcoming product line. However, below
                 are some results of the process.</p>
                 <br>
 
