--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
           <h1>Hi! I'm <em class="bold">
             <span
                class="txt-rotate"
-               data-period="2000"
-               data-rotate='[ "Tristine.", "a UX/UI designer.", "an empathizer." ]'></span></em>
+               data-period="50"
+               data-rotate='[ " Tristine.", " a UX/UI designer.", " an empathizer." ]'></span></em>
           </h1>
             <h3>Based in <em class="bold">Atlanta, GA.</em></h3>
             <h3>I solve problems with empathy to connect people together.</h3>
@@ -130,6 +130,17 @@
                 </div><!--overlay end-->
               </a>
           </section>
+
+          <!-- SECRET PROJECT -->
+          <section class="secretProject">
+              <img  class="photo" src="imagesUpdated/answerRocketProject/answerRocket.png" alt="AnswerRocket background">
+                <a href="pass.html">
+                  <div class="overlay">
+                     <div class="overlay_description">
+                       Password Required</div><!--overlay description-->
+                  </div><!--overlay end-->
+                </a>
+            </section>
 
         <!-- PROJECT 5 -->
         <section class="project5">
